--- a/2013/scss/header.scss
+++ b/2013/scss/header.scss
@@ -17,7 +17,7 @@
     h1{padding: 10px 0 0 60px; background-size: 60px 60px;}
   }
 
-  @media screen and (min-width: 600px){
+  @media screen and (min-width: 700px){
     padding: 40px 20px;
     h1{padding: 10px 0 0 70px; background-size: 70px 70px;}
     h2{margin: -12px 0 0 190px;}
